--- a/templates/buildspec_apply.yml
+++ b/templates/buildspec_apply.yml
@@ -17,6 +17,8 @@ phases:
     commands:
       - "cd ${CODEBUILD_SRC_DIR}/${CODE_SRC_DIR}"
       - "echo ## TERRAFORM APPLY : Starting with the Terraform Apply"
+      - "terraform init"
+      #- "terraform plan -input=false tfplan"
       - "terraform apply --auto-approve"
       #- "terraform apply -input=false tfapply"
 
